prod profile and configuration